--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             <link rel="stylesheet" type="text/css" href="style.css"/>
             <title>My title style</title>
         </head>
-        <body></body>
-        <h1>Hello world</h1>
+            <body></body>
+            <h1>Hello world</h1>
+        <a href="https://flatironschool.com">visit flatironschool</a>
     </html>
