--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
  <!DOCTYPE html >
     <html lang="en">
+        <ul>
+            <li>2 slices of bread</li>
+            <li>4 slices of cheese 
+                <ul>
+                    <li>cheddar</li>
+                    <li>mozzarella</li>
+                    <li>pepper jack</li>
+                </ul>
+            </li>
+            <li>1 tsp of butter</li>
+        </ul>
 
-        <head>
-            <link rel="stylesheet" type="text/css" href="style.css"/>
-            <title>My title style</title>
-        </head>
-            <body></body>
-            <h1>Hello world</h1>
-        <a href="https://flatironschool.com">visit flatironschool</a>
+        <ol>
+            <li>spread butter on bread and frying pan</li>
+            <li>place bread in frying pan and fry</li>
+            <li>add cheese on top of bread</li>
+            <li>Cover with second slice of bread</li>
+            <li>Turn over and fry for 2 minutes</li>
+        </ol>
     </html>
