--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
  <!DOCTYPE html >
-    <html lang="en">
-        <ul>
-            <li>2 slices of bread</li>
-            <li>4 slices of cheese 
-                <ul>
-                    <li>cheddar</li>
-                    <li>mozzarella</li>
-                    <li>pepper jack</li>
-                </ul>
-            </li>
-            <li>1 tsp of butter</li>
-        </ul>
+    <html>
+        <table border="3" width="300">
+            <tr>
+                <th width="100">city</th>
+                <th width="100">state</th>
+                <th width="100">2017 estimate</th>
+            </tr>
+            <tr>
+                <td>New York</td>
+                <td>New York</td>
+                <td>8,622,698</td>
+            </tr>
+            <tr>
+                <td>Los Angeles</td>
+                <td>California</td>
+                <td>3,999,759</td>
+            </tr>
+            <tr>
+                <td>Chicago</td>
+                <td>Illinois</td>
+                <td>2,716,450</td>
+            </tr>
+            <tr>
+                <td>Houston</td>
+                <td>Texas</td>
+                <td>2,312,717</td>
+            </tr>
+        </table>
 
-        <ol>
-            <li>spread butter on bread and frying pan</li>
-            <li>place bread in frying pan and fry</li>
-            <li>add cheese on top of bread</li>
-            <li>Cover with second slice of bread</li>
-            <li>Turn over and fry for 2 minutes</li>
-        </ol>
+     
     </html>
